# APE2_MVP

./: .env.example  .env.solana.example  .gitignore  GET_TESTNET_USDC.md  PLAYGROUND.md  QUICKSTART.md  README.md  SOLANA_QUICKSTART.md  SOLANA_README.md  UPDATE_ENV.md  ecosystem.config.js  get-base58-key.js  hardhat.config.ts  package-lock.json  package.json  prd.md  quickstart2.md  start-all.sh  start-playground.sh  start-solana.sh  stop-all.sh  stop-playground.sh  stop-solana.sh  tsconfig.json
.claude/: settings.local.json
@types/: better-sqlite3.d.ts
contracts/: AEP2DebitWallet.sol  MockERC20.sol
contracts/solana/: Anchor.toml
contracts/solana/programs/aep2_debit_wallet/: Cargo.toml
contracts/solana/programs/aep2_debit_wallet/src/: lib.rs
playground/: PLAYGROUND_README.md  next.config.ts  package-lock.json  package.json
playground/app/: layout.tsx  page.tsx
playground/app/api/sp/health/: route.ts
playground/app/solana/: layout.tsx  page.tsx
playground/components/: MandatePanel.tsx  PayeePanel.tsx  SPPanel.tsx  SolanaMandatePanel.tsx  SolanaWalletPanel.tsx  WalletPanel.tsx
playground/components/providers/: SolanaWalletProvider.tsx  WalletProvider.tsx
scripts/: check-sp-auth.ts  deploy.ts  deposit.ts  get-addresses.ts  setup.ts
scripts/solana/: authorize-sp.ts  create-test-usdc.ts  init-program.mjs  test-flow.ts
services/: client-solana.ts  client.ts  faucet-solana.ts  faucet.ts  payee-solana.ts  payee.ts  sp-solana.ts  sp-v2.ts  sp.ts
test/: AEP2DebitWallet.test.ts
