[package]
name = "aep2_debit_wallet"
version = "0.1.0"
description = "AEP2 Debit Wallet for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aep2_debit_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"

